- Fixed: Finbar pseudobackground incorrect margin - Fixed: Pseudobackground visibility - Fixed: Missed transitions for Finbar

--- a/NeoZen/Features/BetterFindbar/BetterFindbar-Background.css
+++ b/NeoZen/Features/BetterFindbar/BetterFindbar-Background.css
@@ -13,13 +13,11 @@
         margin-bottom: 0px !important;
         height: 95px !important;
         top: auto !important;
-        margin-right: var(--zen-element-separation) !important;
         bottom: -9%;
 
         border-radius: var(--Neo-Border-Radius) !important;
-
-        visibility: hidden !important;
-        transition: opacity 0.3s ease, bottom 0.6s ease;
+        visibility: visible !important;
+        transition: opacity 0.8s ease, bottom 0.6s ease !important;
     }
 }
 
@@ -27,10 +25,8 @@
     :has(.browserSidebarContainer.deck-selected > .browserContainer > findbar:not([hidden="true"]):hover) {
 
         #zen-appcontent-wrapper::before {
-            visibility: visible !important;
             opacity: 1 !important;
             bottom: 1% !important;
-            transition: opacity 0.3s ease, bottom 0.6s ease;
         }
     }
 }
@@ -42,7 +38,6 @@
             visibility: visible !important;
             opacity: 1 !important;
             bottom: 1% !important;
-            transition: opacity 0.3s ease, bottom 0.6s ease;
         }
     }
 }
